tests/parser/should_compile/T14189.hs
module T14189
  (
  MyType (f,NT)
  ) where

data MyType = MT Int | NT | F { f :: Int }
