tests/parser/should_fail/readFail026.hs
module ShouldFail where
data T = T{a::Int}
x = T{,a=42}
